--- a/_docs/text/04previous_solutions.tex
+++ b/_docs/text/04previous_solutions.tex
@@ -9,7 +9,7 @@ SVGEdit je jediné oficiálne rozšírenie existujúce v dobe písania tejto dip
 Nevýhodou tohoto riešenia je, že samotný editor je vložený formou iframe widgetu zo stránok vývojárov tohoto widgetu. To spôsobuje nemožnosť upraviť vzhľad alebo funkcionalitu editora. Prepojenie s MediaWiki systémom je zabezpečené pomocou asynchrónnych ajax volaní. Editor taktiež nepodporuje kolaboratívnu úpravu jedného súboru viacerými používateľmi. Ďalšou nevýhodou je jeho zložité ovládanie ktoré sa nehodí pre cieľovú skupinu finálnej aplikácie, ktorou sú študenti základných a stredných škôl.
 
 \begin{figure}[h]
-	\centerline{\includegraphics[width=1\textwidth]{images/content/SVGEdit}}
+	\centerline{\includegraphics[width=1\textwidth]{images/svg-edit}}
 	\caption[Editor SVG-edit]{Prostredie editora SVG-edit}
 	\label{obr:SVGedit}
 \end{figure}
@@ -23,7 +23,7 @@ Figma je profesionálny grafický editor s možnosťou kolaboratívnej práce vi
 Keďže sa však jedná o samostatný webovú aplikáciu nieje možné ju implementovať do MediaWiki systému.
 
 \begin{figure}[h]
-	\centerline{\includegraphics[width=1\textwidth]{images/content/figma}}
+	\centerline{\includegraphics[width=1\textwidth]{images/figma}}
 	\caption[Editor Figma]{Prostredie kolaboratívneho editora Figma}
 	\label{obr:Figma}
 \end{figure}
