--- a/_docs/text/references.bib
+++ b/_docs/text/references.bib
@@ -20,6 +20,49 @@
 	doi={10.1109/T4E.2013.55}, 
 	month={Dec},
 }
+@article{doi:10.1177/0021943603259363,
+	author = {Paul Benjamin Lowry and Aaron Curtis and Michelle René Lowry},
+	title ={Building a Taxonomy and Nomenclature of Collaborative Writing to Improve Interdisciplinary Research and Practice},
+	journal = {The Journal of Business Communication (1973)},
+	volume = {41},
+	number = {1},
+	pages = {66-99},
+	year = {2004},
+	doi = {10.1177/0021943603259363},
+	
+	URL = { 
+	https://doi.org/10.1177/0021943603259363
+	
+	},
+	eprint = { 
+	https://doi.org/10.1177/0021943603259363
+	
+	}
+}
+
+@ARTICLE{doi:10.1109/MIC.2010.145,
+	author = {S. Tilkov and S. Vinoski},
+	journal = {IEEE Internet Computing},
+	title = {Node.js: Using JavaScript to Build High-Performance Network Programs},
+	year = {2010},
+	volume = {14},
+	number = {},
+	pages = {80-83},
+	keywords={Node; Node.js; functional programming; Web development; JavaScript; Internet},
+	doi = {10.1109/MIC.2010.145},
+	url = {doi.ieeecomputersociety.org/10.1109/MIC.2010.145},
+	ISSN = {1089-7801},
+	month={11}
+}
+@article{jain2015angularjs,
+	title={AngularJS: A modern MVC framework in JavaScript},
+	author={Jain, Nilesh and Bhansali, Ashok and Mehta, Deepak},
+	journal={International Journal of Global Research in Computer Science (UGC Approved Journal)},
+	volume={5},
+	number={12},
+	pages={17--23},
+	year={2015}
+}
 
 @INPROCEEDINGS{7550838, 
 	author={W. Chansuwath and T. Senivongse}, 
@@ -29,7 +72,7 @@
 	pages={1-6}, 
 	keywords={Internet;Unified Modeling Language;software tools;source code (software);AngularJS framework;UML profile;Web application development;code template construction;model-driven development;transformation tool;Business;HTML;Load modeling;Model-driven development;Software;Unified modeling language;User interfaces;AngularJS;UML profile;model-driven development;web applications}, 
 	doi={10.1109/ICIS.2016.7550838}, 
-	month={June},
+	month={June}
 }
 
 @INPROCEEDINGS{7011937, 
@@ -41,6 +84,30 @@
 	keywords={Internet;application program interfaces;online front-ends;parallel processing;peer-to-peer computing;volunteer computing;P2P communication function;PeerJS;URL;Web browsers;Web real-time communication API;Web techniques;Web-based VC;Web-based volunteer computing;WebRTC API;file sharing;high-performance computing environment;peer-to-peer communication function;Bandwidth;Browsers;Computational modeling;Educational institutions;Load management;Peer-to-peer computing;WebRTC}, 
 	doi={10.1109/ISCIT.2014.7011937}, 
 	month={Sept},
+}
+
+@article{cabanier2014html,
+	title={HTML canvas 2D context},
+	author={Cabanier, Rik and Graff, Eliot and Munro, Jay and Wiltzius, Tom and Hickson, I},
+	journal={W3C Candidate Recommendation (work in progress)},
+	volume={21},
+	year={2014}
+}
+
+@inproceedings{krotzsch2006semantic,
+	title={Semantic mediawiki},
+	author={Kr{\"o}tzsch, Markus and Vrande{\v{c}}i{\'c}, Denny and V{\"o}lkel, Max},
+	booktitle={International semantic web conference},
+	pages={935--942},
+	year={2006},
+	organization={Springer}
+}
+
+@book{rai2013socket,
+	title={Socket. IO Real-time Web Application Development},
+	author={Rai, Rohit},
+	year={2013},
+	publisher={Packt Publishing Ltd}
 }
 
 @Misc{AngularApiDoc,
@@ -68,21 +135,28 @@
 }
 @Misc{MediaWikiHelpFormating,
 	author 		= {MediaWiki.org},
-	title  		= {Help:Formatting MediaWiki - [online]},
+	title  		= {Help:Formatting MediaWiki - MediaWiki [online]},
 	month  		= {Máj},
 	year   		= {2017},
 	note		= {\\\url{https://www.mediawiki.org/wiki/Help:Formatting}}
 }
 @Misc{MediaWikiExtension,
 	author 		= {MediaWiki.org},
-	title  		= {Manual:Developing extensions [online]},
+	title  		= {Manual:Developing extensions - MediaWiki [online]},
 	month  		= {Máj},
 	year   		= {2017},
 	note		= {\\\url{https://www.mediawiki.org/wiki/Manual:Developing_extensions}}
 }
+@Misc{MediaWikiConventions,
+	author 		= {MediaWiki.org},
+	title  		= {Manual:Coding conventions - MediaWiki [online]},
+	month  		= {Máj},
+	year   		= {2017},
+	note		= {\\\url{https://www.mediawiki.org/wiki/Manual:Coding_conventions}}
+}
 @Misc{AngularTutorial,
 	author 		= {W3Schools.com},
-	title  		= {AngularJS Tutorial [online]},
+	title  		= {AngularJS Tutorial [online]},
 	month  		= {Máj},
 	year   		= {2017},
 	note		= {\\\url{https://www.w3schools.com/angular/}}
